fix:flicker

--- a/css/style.css
+++ b/css/style.css
@@ -9925,7 +9925,7 @@ textarea.form-control {
   -webkit-transform: none;
   -ms-transform: none;
   transform: none;
-  background-color: rgb(0, 0, 0,0.5);
+  background-color: rgb(255, 255, 255);
   border-radius: 0;
   -webkit-box-shadow: none;
   box-shadow: none; }
